--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,67 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+
 body {
-  font-family: 'Arial', sans-serif;
-  background-color: #f8f8ff; /* light blue color */
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+font-family: 'Arial', sans-serif;
+background-color: #f8f8ff; /* light blue color */
+background-image: url(images/background.jpg);
+margin: 0;
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
 }
 
 #time-since {
-  font-size: 24px;
-  color: #ff69b4; /* pink color */
-  background-color: #fff;
-  border: 2px solid #ff69b4; /* pink color */
-  border-radius: 10px;
-  padding: 10px 20px;
-  width: fit-content;
-  margin-left: 10px;
-  margin-right: 10px;
+font-size: 24px;
+color: #ff69b4; /* pink color */
+background-color: #fff;
+border: 2px solid #ff69b4; /* pink color */
+border-radius: 10px;
+padding: 10px 20px;
+width: fit-content;
+margin-left: 10px;
+margin-right: 10px;
+}
+
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 100px;
+    background: rgba(255, 255, 255, .1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(10px);
+    border-bottom: 2px solid rgb(255, 255, 255);
+}
+.header::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
+    transition: .5s;
+}
+.header:hover::before {
+    left: 100%;
+}
+.logo {
+    color: #fff;
+    font-size: 25px;
+    text-decoration: none;
+    font-weight: 600;
+    cursor: default;
+    align-self: center;
+    justify-self: center;
 }
